--- a/redux-saga/1.1-beginner-tutorial.md
+++ b/redux-saga/1.1-beginner-tutorial.md
@@ -1,2 +1,4 @@
 
 示例代码：[counter](https://github.com/redux-saga/redux-saga/tree/master/examples/counter)
+
+[codesandbox](https://codesandbox.io/s/github/redux-saga/redux-saga/tree/master/examples/counter)
