--- a/redux-saga/1.1-beginner-tutorial.md
+++ b/redux-saga/1.1-beginner-tutorial.md
@@ -2,3 +2,12 @@
 示例代码：[counter](https://github.com/redux-saga/redux-saga/tree/master/examples/counter)
 
 [codesandbox](https://codesandbox.io/s/github/redux-saga/redux-saga/tree/master/examples/counter)
+
+Refs:
+[构建你自己的 redux-saga](https://www.yuque.com/shinima/blog/qtarrq)
+[完全理解redux-saga](http://www.ayqy.net/blog/redux-saga/)
+[redux-saga，化异步为同步](https://www.chainnews.com/articles/323920610759.htm)
+[Redux从设计到源码](https://tech.meituan.com/2017/07/14/redux-design-code.html)
+[Redux 基础](https://segmentfault.com/a/1190000015978307)
+[Redux 进阶](https://segmentfault.com/a/1190000015978492)
+
