--- a/redux-saga/1.1-beginner-tutorial.md
+++ b/redux-saga/1.1-beginner-tutorial.md
@@ -3,6 +3,9 @@
 
 [codesandbox](https://codesandbox.io/s/github/redux-saga/redux-saga/tree/master/examples/counter)
 
+[Beginner Tutorial](https://redux-saga.js.org/docs/introduction/BeginnerTutorial.html)|
+[新手教程](https://redux-saga-in-chinese.js.org/docs/introduction/BeginnerTutorial.html)
+
 Refs:
 * [构建你自己的 redux-saga](https://www.yuque.com/shinima/blog/qtarrq)
 * [完全理解redux-saga](http://www.ayqy.net/blog/redux-saga/)
