--- a/redux-saga/1.1-beginner-tutorial.md
+++ b/redux-saga/1.1-beginner-tutorial.md
@@ -1,10 +1,11 @@
 
 示例代码：[counter](https://github.com/redux-saga/redux-saga/tree/master/examples/counter)
 
-[codesandbox](https://codesandbox.io/s/github/redux-saga/redux-saga/tree/master/examples/counter)
+在线演练：[codesandbox/counter](https://codesandbox.io/s/github/redux-saga/redux-saga/tree/master/examples/counter)
 
-[Beginner Tutorial](https://redux-saga.js.org/docs/introduction/BeginnerTutorial.html)|
+官方文档：[Beginner Tutorial](https://redux-saga.js.org/docs/introduction/BeginnerTutorial.html)|
 [新手教程](https://redux-saga-in-chinese.js.org/docs/introduction/BeginnerTutorial.html)
+
 
 Refs:
 * [构建你自己的 redux-saga](https://www.yuque.com/shinima/blog/qtarrq)
