--- a/redux-saga/1.1-beginner-tutorial.md
+++ b/redux-saga/1.1-beginner-tutorial.md
@@ -6,6 +6,7 @@
 官方文档：[Beginner Tutorial](https://redux-saga.js.org/docs/introduction/BeginnerTutorial.html)|
 [新手教程](https://redux-saga-in-chinese.js.org/docs/introduction/BeginnerTutorial.html)
 
+![1.1-beginner-tutorial](./images/1.1-beginner-tutorial.png)
 
 Refs:
 * [构建你自己的 redux-saga](https://www.yuque.com/shinima/blog/qtarrq)
