--- a/redux-saga/1.2-saga-background.md
+++ b/redux-saga/1.2-saga-background.md
@@ -1,3 +1,11 @@
 
 官方文档：[Background on the Saga concept](https://redux-saga.js.org/docs/introduction/SagaBackground.html)|
 [Saga 概念的背景](https://redux-saga-in-chinese.js.org/docs/introduction/SagaBackground.html)
+
+### Refs
+* [André Kovac - Handle All Async Events in Redux-Sagas | React Next 2019](https://www.youtube.com/watch?v=FsC4CF40__I)
+* [Build a Chat Application using React, Redux, Redux-Saga, and Web Sockets - Tutorial](https://www.youtube.com/watch?v=x_fHXt9V3zQ)
+* [Using sagas to maintain data consistency in a microservice architecture by Chris Richardson](https://www.youtube.com/watch?v=YPbGW3Fnmbc)
+* [Applying the Saga Pattern • Caitie McCaffrey](https://www.youtube.com/watch?v=xDuwrtwYHu8)
+* [Original paper](http://www.cs.cornell.edu/andru/cs711/2002fa/reading/sagas.pdf)
+* [A Saga on Sagas](https://docs.microsoft.com/en-us/previous-versions/msp-n-p/jj591569(v=pandp.10))
