--- a/redux-saga/2.1-using-saga-helpers.md
+++ b/redux-saga/2.1-using-saga-helpers.md
@@ -1,2 +1,4 @@
 官方文档：[Using Saga Helpers](https://redux-saga.js.org/docs/basics/UsingSagaHelpers.html)|
 [使用 Saga 辅助函数](https://redux-saga-in-chinese.js.org/docs/basics/UsingSagaHelpers.html)
+
+![2.1-using-saga-helpers](./images/2.1-using-saga-helpers.png)
