--- a/redux-saga/2.2-declarative-effects.md
+++ b/redux-saga/2.2-declarative-effects.md
@@ -1,2 +1,4 @@
 官方文档：[Declarative Effects](https://redux-saga.js.org/docs/basics/DeclarativeEffects.html)|
 [声明式 Effects](https://redux-saga-in-chinese.js.org/docs/basics/DeclarativeEffects.html)
+
+![2.2-declarative-effects](./images/2.2-declarative-effects.png)
