--- a/redux-saga/2.3-dispatching-actions.md
+++ b/redux-saga/2.3-dispatching-actions.md
@@ -1,2 +1,4 @@
-官方文档：[Dispatching actions](https://redux-saga.js.org/docs/basics/DispatchingActions.html)|
+官方文档：[Dispatching actions to the store](https://redux-saga.js.org/docs/basics/DispatchingActions.html)|
 [发起 action 到 store](https://redux-saga-in-chinese.js.org/docs/basics/DispatchingActions.html)
+
+![2.3-dispatching-actions](./images/2.3-dispatching-actions.png)
