--- a/redux-saga/2.4-error-handling.md
+++ b/redux-saga/2.4-error-handling.md
@@ -1,2 +1,4 @@
 官方文档：[Error handling](https://redux-saga.js.org/docs/basics/ErrorHandling.html)|
 [错误处理](https://redux-saga-in-chinese.js.org/docs/basics/ErrorHandling.html)
+
+![2.4-error-handling](./images/2.4-error-handling.png)
